--- a/chat/package.json
+++ b/chat/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bull-board/api": "^6.7.1",
     "@bull-board/express": "^6.7.1",
+    "@socket.io/admin-ui": "^0.5.1",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
